# template-haskell-hello

./: .gitignore  8107.nix  927.nix  945.nix  961.nix  GenMain.hs  Main.hs  README.md  cabal.project  default.nix  shell.nix  template-haskell-hello.cabal
